corpus/block_comment.txt
==============
Block comments
==============

Lorem {# ipsum dolor sit amet, 
consectetur adipiscing elit, 
sed#} do eiusmod tempor incididunt 
ut labore et dolore magna aliqua. 

---

(template
  (content)
  (comment_directive)
  (content))
