corpus/inline_comment.txt
===============
Inline comments
===============

Lorem {# ipsum #} dolor sit amet, 
consectetur adipiscing elit, 
{#sed#} do eiusmod tempor incididunt 
ut labore et dolore magna aliqua. 

---

(template
  (content)
  (comment_directive)
  (content)
  (comment_directive)
  (content))
