test/corpus/output_directive.txt
================================================================================
Simple variable
================================================================================

Lorem {{ ipsum }} dolor sit amet

--------------------------------------------------------------------------------

(template
  (content)
  (output_directive
    (variable))
  (content))

================================================================================
Function call
================================================================================

Lorem {{ ipsum() }} dolor sit amet

--------------------------------------------------------------------------------

(template
  (content)
  (output_directive
    (function_call
      (function_identifier)
      (arguments)))
  (content))

================================================================================
Function call w/ arguments
================================================================================

Lorem {{ ipsum(test, test) }} dolor sit amet

--------------------------------------------------------------------------------

(template
  (content)
  (output_directive
    (function_call
      (function_identifier)
      (arguments
        (argument
          (argument_value
            (variable)))
        (argument
          (argument_value
            (variable))))))
  (content))

================================================================================
Variable and filter
================================================================================

Lorem {{ ipsum | filter }} dolor sit amet

--------------------------------------------------------------------------------

(template
  (content)
  (output_directive
    (variable)
    (filter
      (filter_identifier)))
  (content))

================================================================================
Variable and filter w/ args
================================================================================

Lorem {{ ipsum | filter(arg) }} dolor sit amet

--------------------------------------------------------------------------------

(template
  (content)
  (output_directive
    (variable)
    (filter
      (filter_identifier)
      (arguments
        (argument
          (argument_value
            (variable))))))
  (content))

================================================================================
Variable and filter w/ string
================================================================================

Lorem {{ ipsum | filter('arg') }} dolor sit amet

--------------------------------------------------------------------------------

(template
  (content)
  (output_directive
    (variable)
    (filter
      (filter_identifier)
      (arguments
        (argument
          (argument_value
            (string))))))
  (content))

================================================================================
string and filter
================================================================================

Lorem {{ 'ipsum' | filter }} dolor sit amet

--------------------------------------------------------------------------------

(template
  (content)
  (output_directive
    (string)
    (filter
      (filter_identifier)))
  (content))

================================================================================
Function call w/ named arguments
================================================================================

{{ convert_encoding(from='iso-2022-jp', to=encoding) }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (function_call
      (function_identifier)
      (arguments
        (argument
          (argument_name)
          (argument_value
            (string)))
        (argument
          (argument_name)
          (argument_value
            (variable))))))
  (content))

================================================================================
Numbers
================================================================================

{{ test(789654) }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (function_call
      (function_identifier)
      (arguments
        (argument
          (argument_value
            (number))))))
  (content))

================================================================================
Float
================================================================================

{{ 7896.54 }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (number))
  (content))

================================================================================
binary expression
================================================================================

{{ test() ~ 'test' }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (binary_expression
      (function_call
        (function_identifier)
        (arguments))
      (operator)
      (string)))
  (content))

================================================================================
binary expression w/ filter
================================================================================

{{ test()|value ~ 'test'|length }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (binary_expression
      (function_call
        (function_identifier)
        (arguments))
      (filter
        (filter_identifier))
      (operator)
      (string)
      (filter
        (filter_identifier))))
  (content))

================================================================================
parenthesis precedence
================================================================================

{{ (greeting ~ name)|lower }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (binary_expression
      (variable)
      (operator)
      (variable))
    (filter
      (filter_identifier)))
  (content))

================================================================================
Arrays
================================================================================

{{ ["test", test(), test|filter] }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (array
      (interpolated_string)
      (function_call
        (function_identifier)
        (arguments))
      (variable)
      (filter
        (filter_identifier))))
  (content))

================================================================================
Hashes
================================================================================

{{ { 'foo': 'foo', bar: 'bar', 2: 'foo', foo, (foo): 'foo', (1 + 1): 'bar', (foo ~ 'b'): 'baz' } }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (hash
      (hash_key
        (string))
      (hash_value
        (string))
      (hash_key
        (name))
      (hash_value
        (string))
      (hash_key
        (number))
      (hash_value
        (string))
      (hash_value
        (variable))
      (hash_key
        (variable))
      (hash_value
        (string))
      (hash_key
        (binary_expression
          (number)
          (operator)
          (number)))
      (hash_value
        (string))
      (hash_key
        (binary_expression
          (variable)
          (operator)
          (string)))
      (hash_value
        (string))))
  (content))

================================================================================
Ternary
================================================================================

{{ foo ? 'yes' : 'no' }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (ternary_expression
      (variable)
      (string)
      (string)))
  (content))

================================================================================
arrow
================================================================================

{{ people|map(p => "ezfze")|join(', ') }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (variable)
    (filter
      (filter_identifier)
      (arguments
        (argument
          (arrow_function
            (name)
            (interpolated_string)))))
    (filter
      (filter_identifier)
      (arguments
        (argument
          (argument_value
            (string))))))
  (content))

================================================================================
Trailing comma
================================================================================

{{ form_widget(child, {
    parent_label_class: label_attr.class|default(''),
}) }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (function_call
      (function_identifier)
      (arguments
        (argument
          (argument_value
            (variable)))
        (argument
          (argument_value
            (hash
              (hash_key
                (name))
              (hash_value
                (variable)
                (filter
                  (filter_identifier)
                  (arguments
                    (argument
                      (argument_value
                        (string))))))))))))
  (content))

================================================================================
Array access
================================================================================

{{ foo['bar'] }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (variable
      (string)))
  (content))

================================================================================
Array slice
================================================================================

{{ foo[0:2] }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (variable
      (number)
      (number)))
  (content))

================================================================================
Array slice 2
================================================================================

{{ foo[:2] }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (variable
      (number)))
  (content))

================================================================================
Array slice 3
================================================================================

{{ foo[0:] }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (variable
      (number)))
  (content))

================================================================================
Fake ternary
================================================================================

{{ test ? 'ok' }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (ternary_expression
      (variable)
      (string)))
  (content))

================================================================================
Null-safe operator
================================================================================

{{ user?.name }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (variable))
  (content))

================================================================================
Chained null-safe operator
================================================================================

{{ session?.user?.name }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (variable))
  (content))

================================================================================
Mixed member access chain
================================================================================

{{ session.user?.name }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (variable))
  (content))

================================================================================
String w/ escaped quote
================================================================================

{{ 'it\'s' }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (string))
  (content))

================================================================================
String w/ escaped backslash and escape sequences
================================================================================

{{ 'path\\to\nfile' }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (string))
  (content))

================================================================================
Interpolated string w/ escape sequences
================================================================================

{{ "tab\there \x41 and \"quoted\" #{name}" }}

--------------------------------------------------------------------------------

(template
  (output_directive
    (interpolated_string
      (variable)))
  (content))

================================================================================
Inline comments
================================================================================

{{
  # this is an inline comment
  "Hello World"|upper
  # this is an inline comment
}}

--------------------------------------------------------------------------------

(template
 (output_directive
  (inline_comment)
  (interpolated_string)
  (filter
   (filter_identifier))
  (inline_comment))
 (content))

================================================================================
Inline comments 2
================================================================================

{{
    {
        # this is an inline comment
        fruit: 'apple', # this is an inline comment
        color: 'red', # this is an inline comment
    }|join(', ')
}}

--------------------------------------------------------------------------------

(template
 (output_directive
  (hash
   (inline_comment)
   (hash_key
    (name))
   (hash_value
    (string))
   (inline_comment)
   (hash_key
    (name))
   (hash_value
    (string))
   (inline_comment))
  (filter
   (filter_identifier)
   (arguments
    (argument
     (argument_value
      (string))))))
 (content))

================================================================================
Inline comment runs to the end of the line, `}}` included
================================================================================

{{ foo # the closing }} is part of the comment
}}

--------------------------------------------------------------------------------

(template
 (output_directive
  (variable)
  (inline_comment))
 (content))

================================================================================
Hash in content is not an inline comment
================================================================================

a # b
c { # d

--------------------------------------------------------------------------------

(template
 (content))

================================================================================
Interpolation is not an inline comment
================================================================================

{{ "hello #{name} # not a comment" }}

--------------------------------------------------------------------------------

(template
 (output_directive
  (interpolated_string
   (variable)))
 (content))

================================================================================
Hash inside strings is not an inline comment
================================================================================

{{ "a#" ~ "#" ~ 'single # quoted' }}

--------------------------------------------------------------------------------

(template
 (output_directive
  (binary_expression
   (interpolated_string)
   (operator)
   (binary_expression
    (interpolated_string)
    (operator)
    (string))))
 (content))

================================================================================
Inline comments in an array and in filter arguments
================================================================================

{{ [1, # first
    2 # second
   ]|join(', ' # separator
) }}

--------------------------------------------------------------------------------

(template
 (output_directive
  (array
   (number)
   (inline_comment)
   (number)
   (inline_comment))
  (filter
   (filter_identifier)
   (arguments
    (argument
     (argument_value
      (string)))
    (inline_comment))))
 (content))

================================================================================
Inline comments in function arguments
================================================================================

{{ range(1, # from
         10 # to
) }}

--------------------------------------------------------------------------------

(template
 (output_directive
  (function_call
   (function_identifier)
   (arguments
    (argument
     (argument_value
      (number)))
    (inline_comment)
    (argument
     (argument_value
      (number)))
    (inline_comment))))
 (content))

================================================================================
Consecutive inline comments
================================================================================

{{
  # comment one
  # comment two
  foo
}}

--------------------------------------------------------------------------------

(template
 (output_directive
  (inline_comment)
  (inline_comment)
  (variable))
 (content))

================================================================================
Inline comments after an operator
================================================================================

{{ a ~ # about b
   b }}
{{ not # negated
   flag }}
{{ x is # tested
   defined }}

--------------------------------------------------------------------------------

(template
 (output_directive
  (binary_expression
   (variable)
   (operator)
   (inline_comment)
   (variable)))
 (output_directive
  (unary_expression
   (operator)
   (inline_comment)
   (variable)))
 (output_directive
  (test_expression
   (variable)
   (operator)
   (inline_comment)
   (test)))
 (content))

================================================================================
Inline comments inside a ternary and after an opening parenthesis
================================================================================

{{ cond ? # then
   x : # else
   y }}
{{ ( # grouped
   a ~ b) }}

--------------------------------------------------------------------------------

(template
 (output_directive
  (ternary_expression
   (variable)
   (inline_comment)
   (variable)
   (inline_comment)
   (variable)))
 (output_directive
  (inline_comment)
  (binary_expression
   (variable)
   (operator)
   (variable)))
 (content))

================================================================================
Inline comments before an operator
================================================================================

{{ a # about a
   ~ b # about b
}}

--------------------------------------------------------------------------------

(template
 (output_directive
  (binary_expression
   (variable)
   (inline_comment)
   (operator)
   (variable))
  (inline_comment))
 (content))

================================================================================
Inline comments inside a string interpolation
================================================================================

{{ "x#{ 1 # c
}y" }}

--------------------------------------------------------------------------------

(template
 (output_directive
  (interpolated_string
   (number)
   (inline_comment)))
 (content))
